# news_service

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup_improvements.sh  test_scraping.py
news/: admin.py  models.py  summarizer.py  tasks.py  urls.py  utils.py  utils.py.backup  views.py
news/management/commands/: parse_feeds.py  show_stats.py
news/migrations/: 0001_initial.py  0002_article_authors_article_meta_description_and_more.py
news_service/: __init__.py  celery.py  settings.py  urls.py
