[tool.poetry]
name = "news-service"
version = "0.1.0"
description = "Parsing agro news, translate english articles and generate summarized notes by OpenAI"
authors = ["Kostiantyn Ivashchenko <kivaschenko@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
psycopg2-binary = "^2.9.11"
djangorestframework = "^3.16.1"
celery = {extras = ["redis"], version = "^5.5.3"}
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
openai = "^2.3.0"
feedparser = "^6.0.11"
django-cors-headers = "^4.9.0"
python-dotenv = "^1.0.0"
transformers = "^4.36.0"
torch = "^2.1.0"
sentencepiece = "^0.1.99"
lxml = "^4.9.3"
newspaper3k = "^0.2.8"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
